entity_macros/tests/ui/derive/ent/duplicate-created.stderr
error: Already have a created timestamp elsewhere
  --> $DIR/duplicate-created.rs:14:11
   |
14 |     #[ent(created)]
   |           ^^^^^^^
